bugfix convertGeoJsonToPolygon
