# apps/api/src/routers/search.ts
@@ -1,16 +1,18 @@
-import { Router } from "express"
+import { Handler, NextFunction, Request, Router } from "express"
 import { getMunicipioUseCase } from "../app/usecase.js"
 import { log } from "logger"
+import { asyncHandler } from "../utils/asyncHandler.js"
+import { geoJson_schema } from "../model/municipio.js"
+import { validatePolygon } from "../middleware/validate-polygon.js"
 
 export const router = Router()
 
-router.post("/", async (req, res) => {
-  log(`POST /search request.body: ${JSON.stringify(req.body, null, 2)}`)
+const searchMunicipiosWithinPolygon: Handler = async (req, res) => {
   const { polygon } = req.body
-
   const useCase = await getMunicipioUseCase()
-  const matchedResults = await useCase.searchMunicipiosWithinPolygon(polygon)
+  const municipios = await useCase.searchMunicipiosWithinPolygon(polygon)
 
-  log(`POST /search response: ${matchedResults}`)
-  return res.status(200).json(matchedResults)
-})
+  return res.json({ municipios })
+}
+
+router.post("/", validatePolygon, asyncHandler(searchMunicipiosWithinPolygon))
